styles/main.css
html,
body {
  height: 100%;
  background-image: url(https://img.freepik.com/free-photo/anime-style-clouds_23-2151071780.jpg?t=st=1711776543~exp=1711780143~hmac=7b146e3be47b9db2db59402cb008ab727add1eb905b5cfafb5e7da554f000a8c&w=1380);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  padding: 30px;
  overflow-y: scroll;
}

body::-webkit-scrollbar {
  display: none;
}

h1,
h3,
h2,
p {
  text-align: center;
}

.tabs {
  text-align: center;
  width: 100%;
  margin: auto;
  text-align: center;
  position: relative;
  cursor: pointer;
  padding: 20px 10px 60px;
  tab-size: 50px;
  opacity: 0.7;
}

button {
  font-size: 25px;
  font-family: sans-serif, monospace;
}

.about-section {
  position: relative;
  background: rgba(230, 227, 227, 0.7);
  text-align: center;
  padding: 20px 20px 20px 20px;
  margin-right: auto;
  margin-left: auto;
  width: 500px;
}

.aboutme {
  border-color: 1px solid black;
}

.first {
  font-family: 100%/1.4, monospace;
  color: #000;
  filter: alpha(opacity=100);
  opacity: 1;
  padding: 15px;
}

.flex-wrapper {
  text-align: center;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  margin-top: 50px;
}
.container img {
  object-fit: contain;
  display: inline-flexbox;
  width: 400px;
}

